[package]
authors = ["insanitybit <insanitybit@gmail.com>"]
name = "playrust_alert"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
clap = "2.33.3"
csv = "1.1.6"
dedup_by = "0.1.0"
lazy_static = "1.4.0"
rand = "0.8.3"
rayon = "1.5.1"
regex = "1.5.4"
rust-tfidf = "1.1.1"
serde_json = "1.0.64"
stopwatch = "0.0.7"
fnv = "1.0.7"
ndarray = "0.15.3"

[dependencies.rustlearn]
git = "https://github.com/BartMassey-upstream/rustlearn"
branch = "2018-edition"

[dependencies.reqwest]
version = "0.11.3"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.tiny-keccak]
version = "2.0.2"
features = ["keccak"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
